# amlta-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: categories.json  glossary.html  insights.json  lci-results-uuids.txt  uuids.txt
data/qdrant/: meta.json
data/qdrant-nomic/: meta.json
data/qdrant-yaml/: meta.json
data/tapas-ft/data/: tapas_train_batched_dfs.parquet  tapas_train_batched_dfs_shuffled.parquet
notebooks/: Embedding model.py  Fine tuning of Jina  base de.ipynb  LaBSE.py  Models Evaluation.py  Reranked Models Evaluation.py  VectDB+search.py  app_in_colab.ipynb  cache_tapas_train_data.ipynb  colab_proxy.ipynb  colab_test.ipynb  embeddings.py  flows_tapas.ipynb  generate_questions.ipynb  glossary_embed.ipynb  glossary_test_hybrid_embed.ipynb  jina-embeddings-v2-base-de Fine-tuned.py  jina-embeddings-v2-base-de.py  multilingual-e5-large.py  paraphrase-multilingual-mpnet-base-v2.py  probas_eda.ipynb  tapas_cache_train_data.ipynb  tapas_eval.ipynb  tapas_eval_qwen_query_generation.ipynb  tapas_fine_tuning.ipynb  test.ipynb  transform.ipynb
src/amlta/: config.py
src/amlta/app/: config.py  graph.py  langgraph_callback.py  llm.py  main.py  serve.py  tools.py
src/amlta/app/agent/: core.py  graph.py  state.py
src/amlta/app/agent/toolkit/: __init__.py  base.py  search_flows.py  search_processes.py  select_process.py  toolkit.py
src/amlta/app/rag/: client.py  collections.py  loaders.py  uuids.py
src/amlta/data_processing/: tapas_flows.py
src/amlta/eval/question_generation/: process_flows.py
src/amlta/formatting/: data.py  flows.py  markdown.py  yaml.py
src/amlta/probas/: README.md  download.py  extract.py  flows.py  glossary.py  processes.py  xml.py
src/amlta/question_generation/: generate.py  prepare_train.py  process.py  process_flows.py  processing.py  query_params.py
src/amlta/tapas/: base.py  model.py  retrieve.py
src/amlta/training/: generate_flow_qa.py
