[project]
name = "amlta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "lxml>=5.3.0",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.2",
    "xmlschema>=3.4.3",
]

[project.scripts]
probas-dl = "amlta.probas.download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.ruff.lint]
select = ["I", "F401"]
