[project]
name = "amlta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.5.1",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-ollama>=0.2.3",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.73",
    "lxml>=5.3.0",
    "openai>=1.61.1",
    "pandas<=2.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.42.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.2",
    "xmlschema>=3.4.3",
]

[project.scripts]
probas-dl = "amlta.probas.download:main"
amlta-app = "amlta.app.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.ruff.lint]
select = ["I", "F401"]
